--- a/plugin/ProgressPanel/EditPanel.ui
+++ b/plugin/ProgressPanel/EditPanel.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Grader Panel</string>
+   <string>Progress Panel</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,2">
    <item>
