完成projectPanel的功能

--- a/plugin/ProjectPanel/Ui_projectPanel.ui
+++ b/plugin/ProjectPanel/Ui_projectPanel.ui
@@ -148,8 +148,20 @@
    </item>
    <item>
     <widget class="QSplitter" name="splitter">
+     <property name="styleSheet">
+      <string notr="true">QSplitter::handle {
+	background-color: rgba(0, 0, 0,0);
+
+}</string>
+     </property>
+     <property name="lineWidth">
+      <number>0</number>
+     </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="handleWidth">
+      <number>5</number>
      </property>
      <widget class="QWidget" name="layoutWidget">
       <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0">
