--- a/plugin/ProgressPanel/EditPanel.ui
+++ b/plugin/ProgressPanel/EditPanel.ui
@@ -30,6 +30,19 @@
       </spacer>
      </item>
      <item>
+      <widget class="QPushButton" name="batch_change_btn">
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="text">
+        <string>批量分派人员</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <widget class="QPushButton" name="client_pass">
        <property name="text">
         <string>客户通过</string>
